# Hackathon_Futury_2026_Techem_Challange

./: .env.example  .gitignore  Prompt_lovable_gamefication  README.md  demo_tenant_features.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data from friend/: Consumption.tsx  mockData.ts
demos/: demo_backend_endpoints.py  demo_landlord_features.py
docs/Extras/: Criticize_Suggestions.md  Implementation_Handoff.md  Implementation_Overview.md  implementation_summary_tenants.md
docs/Plan/: Prediction_Engine_Plan.md  Tenant_Facing_features.md
docs/brainstorm/: Brainstorm_Prediction_and_UX_Claude.md  Brainstorming_and_Strategy_Gemini.md
docs/general/: Challenge_Overview.md  Technical_Summary.md  backend_overview.md  frontend_overview.md
docs/prompts/: backend_frontend_integration_prompt.md  backend_overview_prompt.md  landlord_prompt.md  tenants_prompt.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AchievementModal.tsx  DemoModeBanner.tsx  EnergyClassBadge.tsx  Leaderboard.tsx  Logo.tsx  PhoneFrame.tsx  Teco.tsx
frontend/src/hooks/: useApi.ts  useLandlordPortfolio.ts
frontend/src/lib/: adapters.ts  api.ts  apiTypes.ts  mockData.ts  unitContext.tsx
frontend/src/pages/: Index.tsx  RoleSelector.tsx
reports/: ablation.md
scripts/: ablation.py  audit.py  train.py
src/techem/: __init__.py  config.py
tests/: test_cv_blocking.py  test_offline_resilience.py  test_reconciliation.py  test_tenant_endpoints.py
(+40 files in other folders)
